--- a/cms/astro/package.json
+++ b/cms/astro/package.json
@@ -45,7 +45,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.5",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
@@ -54,7 +56,7 @@
     "dotenv": "^16.5.0",
     "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "vite": "^6.2.5"
