--- a/cms/nextjs/package.json
+++ b/cms/nextjs/package.json
@@ -4,7 +4,7 @@
 	"website": "starters-simple-cms-nextjs.vercel.app",
 	"license": "MIT",
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"generate:types": "tsx ./src/lib/directus/generateDirectusTypes.ts",
@@ -16,57 +16,58 @@
 		"@directus/sdk": "^19.1.0",
 		"@directus/visual-editing": "^1.1.0",
 		"@hookform/resolvers": "^5.0.1",
-		"@radix-ui/react-checkbox": "^1.1.4",
-		"@radix-ui/react-collapsible": "^1.1.3",
-		"@radix-ui/react-dialog": "^1.1.6",
-		"@radix-ui/react-dropdown-menu": "^2.1.6",
-		"@radix-ui/react-label": "^2.1.2",
-		"@radix-ui/react-navigation-menu": "^1.2.5",
-		"@radix-ui/react-radio-group": "^1.2.3",
-		"@radix-ui/react-select": "^2.1.6",
-		"@radix-ui/react-separator": "^1.1.2",
-		"@radix-ui/react-slot": "^1.1.2",
-		"@radix-ui/react-tooltip": "^1.1.8",
+		"@radix-ui/react-checkbox": "^1.3.1",
+		"@radix-ui/react-collapsible": "^1.1.10",
+		"@radix-ui/react-dialog": "^1.1.13",
+		"@radix-ui/react-dropdown-menu": "^2.1.14",
+		"@radix-ui/react-label": "^2.1.6",
+		"@radix-ui/react-navigation-menu": "^1.2.12",
+		"@radix-ui/react-radio-group": "^1.3.6",
+		"@radix-ui/react-select": "^2.2.4",
+		"@radix-ui/react-separator": "^1.1.6",
+		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-tooltip": "^1.2.6",
 		"@tailwindcss/typography": "^0.5.16",
-		"@types/react": "^19.1.0",
-		"@types/react-dom": "^19.1.1",
+		"@types/react": "^19.1.3",
+		"@types/react-dom": "^19.1.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.1.1",
-		"dotenv": "^16.4.7",
-		"lucide-react": "^0.487.0",
-		"next": "15.2.4",
+		"dotenv": "^16.5.0",
+		"lucide-react": "^0.508.0",
+		"next": "15.3.2",
 		"next-themes": "^0.4.6",
 		"p-queue": "^8.1.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-hook-form": "^7.55.0",
-		"shadcn": "^2.4.0",
-		"tailwind-merge": "^2.6.0",
-		"zod": "^3.24.2"
+		"react-hook-form": "^7.56.3",
+		"shadcn": "^2.5.0",
+		"tailwind-merge": "3.2.0",
+		"zod": "^3.24.4"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.24.0",
-		"@next/bundle-analyzer": "15.2.4",
-		"@next/eslint-plugin-next": "15.2.4",
+		"@eslint/js": "^9.26.0",
+		"@next/bundle-analyzer": "15.3.2",
+		"@next/eslint-plugin-next": "15.3.2",
+		"@tailwindcss/postcss": "^4.1.5",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
-		"@types/node": "^22.14.0",
+		"@types/node": "^22.15.17",
 		"directus-sdk-typegen": "^0.2.0",
-		"eslint": "^9.24.0",
-		"eslint-config-next": "15.2.4",
-		"eslint-config-prettier": "^10.1.1",
+		"eslint": "^9.26.0",
+		"eslint-config-next": "15.3.2",
+		"eslint-config-prettier": "^10.1.3",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-tailwindcss": "^3.18.0",
-		"globals": "^16.0.0",
+		"globals": "^16.1.0",
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "4.1.5",
 		"tailwindcss-animate": "^1.0.7",
-		"tsx": "^4.19.3",
+		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.1"
+		"typescript-eslint": "^8.32.0"
 	}
 }
