--- a/cms/sveltekit/package.json
+++ b/cms/sveltekit/package.json
@@ -11,7 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint . && prettier --check .",
 		"lint:fix": "eslint --fix \"src/**/*.{js,ts,svelte}\" && prettier --write .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"generate:types": "tsx ./src/lib/directus/generateDirectusTypes.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.7",
@@ -42,6 +43,7 @@
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.19.3",
 		"typescript": "^5.8.2",
 		"typescript-eslint": "^8.28.0",
 		"vite": "^6.2.4"
