--- a/cms/astro/package.json
+++ b/cms/astro/package.json
@@ -56,6 +56,7 @@
     "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vite": "^6.2.5"
   },
